# CalculatorCpp

./: CMakeLists.txt  CalculatorCPlus.sln  README.md
CalculatorCPlus/: CONSTANTS.h  CalculatedModule.cpp  CalculatedModule.h  Calculator.cpp  Calculator.h  CalculatorCPlus.cpp  CalculatorCPlus.vcxproj  CalculatorCPlus.vcxproj.filters  Executor.cpp  Executor.h  ListToken.cpp  ListToken.h  ParserListToken.cpp  Token.cpp  Token.h
Calculator_tests/: Calculator_tests.cpp  Calculator_tests.vcxproj  Calculator_tests.vcxproj.filters
UnitTestOfCalculator/: UnitTestOfCalculator.cpp  UnitTestOfCalculator.vcxproj
UnitTestOfCalculatorNew/: UnitTestOfCalculator.cpp  UnitTestOfCalculator.vcxproj  UnitTestOfCalculator.vcxproj.filters
sourse/: main.cpp
sourse/core/: CalculatedModule.cpp  CalculatedModule.h  Calculator.cpp  Calculator.h  Executor.cpp  Executor.h  ListToken.cpp  ListToken.h  ParserListToken.cpp  ParserListToken.h  Token.cpp  Token.h
test/: Calculator_tests.cpp
